fixed font-size, and overlapping divs

--- a/style.css
+++ b/style.css
@@ -172,6 +172,7 @@ img {
     position: absolute;
     z-index: 10;
     font-size: 10px;
+    left: 15px;
   }
 }
 /*STOCK*/
@@ -293,7 +294,7 @@ a {
 @media only screen and (max-width: 600px) {
   .column.collections {
     width: 100%;
-    height: 90vh;
+    height: 100vh;
     background-color: #f1f1f1;
   }
   .collections {
@@ -916,6 +917,12 @@ a {
 /* FOOTER column */
 .column.footer {
   width: 50%;
+}
+
+@media screen and (max-width: 500px) {
+  .column.footer {
+    font-size: 10px;
+  }
 }
 
 .column.footer a {
